--- a/all-eboard.html
+++ b/all-eboard.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="Code Crunch - Home" />
     <meta name="author" content="Code Crunch" />
-    <title>Home - Code Crunch</title>
+    <title>Code Crunch E-Board</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Bootstrap icons-->
@@ -62,6 +62,8 @@
         transform: scale(1.1);
         transition: transform 0.2s ease-in-out;
       }
+
+
       /* Navigation link styles with hover highlighting */
       .navbar-nav .nav-link {
         position: relative;
@@ -109,10 +111,7 @@
               <a class="nav-link" href="about.html" style="padding:10px 15px;">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="events.html" style="padding:10px 15px;">Events</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="SWE-CONVOS.html" style="padding:10px 15px;">SWE-CONVOS</a>
+              <a class="nav-link" href="SWE-CONVOS.html" style="padding:10px 15px;">SWE Convos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="CODECRUNCH-HACK.html" style="padding:10px 15px;">Code Crunch Hackathon</a>
@@ -128,13 +127,16 @@
       </div>
     </nav>
 
-    <!-- Logo Section -->
-    <div class="logo-container" data-aos="fade-down">
-      <img src="https://github.com/user-attachments/assets/c359ccd5-2470-4ba5-a8fe-a32ee12a4e0a" alt="Code Crunch Club Logo" />
-    </div>
+  
 
     <!-- Welcome Header -->
     <header class="py-5">
+
+
+      <div class="container px-lg-5 text-center" data-aos="fade-up">
+        <h1 class="display-5 fw-bold">Join the Code Crunch E-Board!</h1>
+        <p class="fs-4">Be a part of the leadership team that drives innovation, collaboration, and inclusivity at Code Crunch! We’re looking for passionate individuals to fill E-Board roles for this year. Whether you're a student or an industry leader who champions diversity and inclusion, we welcome you to help shape the future of our club.</p>
+        <p class="fs-4">No experience? No problem! All students, regardless of major, and professionals eager to make an impact are encouraged to apply.</p>
       <div class="container px-lg-5 text-center" data-aos="fade-up">
         <!-- Social Media Links -->
         <div class="social-buttons">
@@ -153,33 +155,17 @@
           <a href="https://fiu.campuslabs.com/engage/organization/codecrunch" class="btn btn-warning" aria-label="Panther Connect">
             <i class="bi bi-university"></i> Panther Connect
           </a>
-          <a href="https://linktr.ee/CODE.CRUNCH" class="btn btn-dark" aria-label="Linktree">
-            <i class="bi bi-link"></i> Linktree
-          </a>
         </div>
       </div>
     </header>
 
     <!-- Page Content -->
-    <section class="page-content-section pt-4">
-      <div class="container px-lg-5">
-        <!-- E-Board Roles Section -->
-        <h1 data-aos="fade-down" class="display-5 fw-bold text-center">
-          Join the Code Crunch E-Board!
-        </h1>
-        <p data-aos="fade-in" data-aos-delay="100" class="text-center">
-          Be a part of the leadership team that drives innovation, collaboration, and inclusivity at Code Crunch! We’re looking for passionate individuals to fill E-Board roles for this year. Whether you're a student or an industry leader who champions diversity and inclusion, we welcome you to help shape the future of our club.
-        </p>
-        <p data-aos="fade-in" data-aos-delay="200" class="text-center">
-          No experience? No problem! All students, regardless of major, and professionals eager to make an impact are encouraged to apply.
-        </p>
+   
 
         <!-- E-Board Details Section -->
         <section class="e-board-section py-5">
           <div class="container">
-            <h1 data-aos="fade-up" class="display-5 fw-bold text-center mb-5">
-              Join Code Crunch as an E-Board Volunteer!
-            </h1>
+        
             <div class="row">
               <!-- Column 1: About the Job -->
               <div data-aos="fade-right" class="col-lg-4 mb-4">
@@ -201,7 +187,8 @@
 
               <!-- Column 2: Key Responsibilities -->
               <div data-aos="fade-up" class="col-lg-4 mb-4">
-                <h2 class="fs-4 fw-bold">Open Position: Tech Engagement Chair</h2>
+                <h2 class="fs-4 fw-bold">Open Position: Tech Engagement Chair </h2>
+                <p><strong>Volunteer role</strong></p>
                 <p><strong>Time Commitment:</strong> 5 hours per week.</p>
                 <h3 class="fs-5 fw-bold mt-4">Key Responsibilities:</h3>
                 <p><strong>Weekly Tech Sessions:</strong></p>
