--- a/all-eboard.html
+++ b/all-eboard.html
@@ -20,21 +20,15 @@
     <!-- Custom CSS -->
     <style>
       /* General styles */
-      html,
       body {
         margin: 0;
         padding: 0;
         min-height: 100%;
         display: flex;
         flex-direction: column;
-      }
-      /* Use the About page background */
-      body {
         font-family: Arial, sans-serif;
-        background: url('images/about-bg.jpg') no-repeat center center fixed;
-        background-size: cover;
-        color: #333;
       }
+ 
       /* Logo section styles */
       .logo-container {
         text-align: center;
@@ -53,6 +47,8 @@
         position: relative;
         margin-top: auto;
       }
+
+
       /* Social buttons */
       .social-buttons .btn,
       .social-buttons a {
@@ -111,6 +107,9 @@
               <a class="nav-link" href="about.html" style="padding:10px 15px;">About</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="Schedules.html" style="padding:10px 15px;">Schedule</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="SWE-CONVOS.html" style="padding:10px 15px;">SWE Convos</a>
             </li>
             <li class="nav-item">
@@ -155,6 +154,9 @@
           <a href="https://fiu.campuslabs.com/engage/organization/codecrunch" class="btn btn-warning" aria-label="Panther Connect">
             <i class="bi bi-university"></i> Panther Connect
           </a>
+          <a href="https://linktr.ee/CODE.CRUNCH" class="btn btn-dark" aria-label="Linktree">
+            <i class="bi bi-link"></i> Linktree
+        </a>
         </div>
       </div>
     </header>
