--- a/contact.html
+++ b/contact.html
@@ -189,7 +189,8 @@
 
         <!-- Footer -->
         <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Code Crunch</p></div>
+            <div class="container">
+              <p>&copy; Code Crunch. All rights reserved.</p>
         </footer>
 
         <!-- Bootstrap core JS -->
