--- a/CODECRUNCH-HACK.html
+++ b/CODECRUNCH-HACK.html
@@ -1059,7 +1059,8 @@
 
 
     <footer>
-        <p>&copy; 2025 Tropical Hacks | <a href="mailto:codecrunchhelp@outlook.com">codecrunchhelp@outlook.com</a></p>
+        <p>&copy; Spring Tropical Hackathon. All rights reserved. | <a href="mailto:codecrunchhelp@outlook.com">codecrunchhelp@outlook.com</a></p>
+        <p>&copy; Code Crunch. All rights reserved.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
