--- a/about.html
+++ b/about.html
@@ -427,7 +427,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">&copy; Code Crunch</p>
+        <p>&copy; Code Crunch. All rights reserved.</p>
       </div>
     </footer>
   
