--- a/about.html
+++ b/about.html
@@ -137,7 +137,8 @@
       <div class="container px-lg-5">
         <div class="p-4 p-lg-5 rounded-3 text-center">
           <h1 class="display-5 fw-bold">About Code Crunch</h1>
-          <p class="fs-4">Your go-to place for FIU students to connect through coding, collaboration, and community</p>
+          <p class="fs-4">Open to all university students—regardless of major or experience—to connect through coding, collaboration, and community.</p>
+
           <!-- Social Media Links -->
           <div class="social-buttons" data-aos="fade-up">
             <a href="https://www.linkedin.com/company/code-crunch-club/" class="btn btn-primary" aria-label="LinkedIn">
