--- a/CODECRUNCH-HACK.html
+++ b/CODECRUNCH-HACK.html
@@ -776,7 +776,7 @@
             
                     <div class="faq-question">Is Tropical Hacks in-person?</div>
                     <div class="faq-answer">
-                        Tropical Hacks operates in a hybrid format. The hackathon itself will be conducted virtually, while the career expo will be exclusively in-person, providing opportunities for networking and engagement.
+                        Tropical Hacks operates in a hybrid format. The hackathon itself will be conducted hybrid format, while the career expo will be exclusively in-person, providing opportunities for networking and engagement.
                     </div>
             
                     <div class="faq-question">Do I need a team to participate?</div>
@@ -816,7 +816,7 @@
             <!-- Column 2 -->
             <div class="col-lg-6 mb-4">
                 <h4 class="fw-bold">Key Details</h4>
-                <p><strong>Applications open December 2024</strong></p>
+                <p><strong>Applications open now</strong></p>
                 <p>Whether you're an experienced coder or a beginner, this is your chance to learn, build, and showcase your skills while connecting with industry experts and fellow tech enthusiasts.</p>
             </div>
         </div>
@@ -1064,6 +1064,17 @@ onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.tr
                 <div class="contributor-card">
                     <img src="#" alt=""> <!-- Company Logo - alt="Company Logo 1" -->
                 </div>
+                <div class="contributor-card">
+                    <img src="#" alt=""> <!-- Company Logo - alt="Company Logo 1" -->
+                </div>
+                <div class="contributor-card">
+                    <img src="#" alt=""> <!-- Company Logo - alt="Company Logo 1" -->
+                </div>
+                <div class="contributor-card">
+                    <img src="#" alt=""> <!-- Company Logo - alt="Company Logo 1" -->
+                </div>
+
+
             </div>
         </div>
     </div>
