--- a/CODECRUNCH-HACK.html
+++ b/CODECRUNCH-HACK.html
@@ -622,7 +622,7 @@
     <!-- Flyer & EST. 2025 Section -->
     <div class="flyer-section">
         <div class="flyer-placeholder">
-            <img src="https://github.com/user-attachments/assets/fdcd9a19-43b1-4898-8297-3a1bb4d7fcf9" alt="Tropical Hacks Flyer">
+            <img src="https://github.com/user-attachments/assets/078086b8-835f-4142-bb0c-6e50cfe5cc65" alt="Tropical Hacks Flyer">
         </div>
         <div class="est-container">
             <img src="https://github.com/user-attachments/assets/30568fdc-c31d-4260-8a24-7e62db85451a" alt="Hibiscus Flower" class="hibiscus-top">
@@ -678,27 +678,48 @@
 </section>
 
 
+<section id="tracks" class="fade-section">
+    <h2 style="text-align: center; font-size: 28px; font-weight: bold; margin-bottom: 20px;">Spring 2025 Tracks</h2>
+    <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; max-width: 1200px; margin: 0 auto;">
 
-    <section id="tracks" class="fade-section">
-        <h2>Spring 2025 Tracks</h2>
-        <div class="tracks-grid">
-            <div class="track-card">
-                <h3>🌍 Sustainability</h3>
-                <p>Innovate solutions to create a greener planet.</p>
-            </div>
-            <div class="track-card">
-                <h3>🤖 AI & Machine Learning</h3>
-                <p>Build intelligent systems to tackle complex problems.</p>
-            </div>
-            <div class="track-card">
-                <h3>💼 Fintech</h3>
-                <p>Revolutionize the financial industry with cutting-edge tech.</p>
-            </div>
-            <div class="track-card">
-                <h3>🎮 Gaming</h3>
-                <p>Design immersive games and digital experiences.</p>
-            </div>
+        <div style="background: #D9534F; color: white; padding: 20px; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); width: calc(50% - 20px); min-width: 350px;">
+            <h3>🌍 Sustainability</h3>
+            <p>Projects that leverage technology to drive sustainable solutions, reduce waste, or promote eco-friendly habits. Examples include carbon footprint tracking apps, smart waste management, and renewable energy tools.</p>
         </div>
+
+        <div style="background: #5CB85C; color: white; padding: 20px; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); width: calc(50% - 20px); min-width: 350px;">
+            <h3>🤖 AI & Machine Learning</h3>
+            <p>Projects focused on creating smart solutions with AI to analyze data, enhance automation, and improve decision-making. This includes chatbots, predictive analytics, and deep learning applications.</p>
+        </div>
+
+        <div style="background: #F0AD4E; color: white; padding: 20px; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); width: calc(50% - 20px); min-width: 350px;">
+            <h3>💼 Fintech</h3>
+            <p>Projects that transform the financial landscape by improving transactions, banking, and personal finance management. Examples include fraud detection, budgeting apps, and blockchain solutions.</p>
+        </div>
+
+        <div style="background: #0275D8; color: white; padding: 20px; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); width: calc(50% - 20px); min-width: 350px;">
+            <h3>🎮 Gaming</h3>
+            <p>Projects that create immersive and interactive gaming experiences, ranging from mobile and console games to VR and AR applications.</p>
+        </div>
+
+        <div style="background: #D9534F; color: white; padding: 20px; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); width: calc(50% - 20px); min-width: 350px;">
+            <h3>🏥 Healthcare</h3>
+            <p>Projects that improve healthcare solutions through digital tools, AI-driven diagnostics, or wellness tracking. This includes mental health support apps, remote patient monitoring, and telehealth services.</p>
+        </div>
+
+        <div style="background: #5CB85C; color: white; padding: 20px; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); width: calc(50% - 20px); min-width: 350px;">
+            <h3>🎭 Entertainment</h3>
+            <p>Projects that explore new ways to consume, create, and distribute media. Examples include AI-powered content creators, streaming innovations, and interactive storytelling.</p>
+        </div>
+
+        <div style="background: #F0AD4E; color: white; padding: 20px; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); width: calc(50% - 20px); min-width: 350px;">
+            <h3>📚 Education</h3>
+            <p>Projects that enhance learning experiences through technology. This includes online education platforms, AI tutors, and interactive training tools.</p>
+        </div>
+
+    </div>
+</section>
+
     
         <div id="awards" class="fade-section">
             <h2>Extra Awards</h2>
