--- a/index.html
+++ b/index.html
@@ -474,20 +474,15 @@
     <div class="container px-lg-5">
         <div style="text-align: center;"> <!-- Centers the iframe horizontally -->
             <iframe
-                src="https://lu.ma/embed/calendar/cal-NbgEYtPLuqBJhtM/events?lt=light"
-                frameborder="0"
-                allowfullscreen=""
-                aria-hidden="false"
-                tabindex="0"
-                style="
-                    width: 100%; /* Makes it responsive */
-                    max-width: 1200px; /* Optional: Sets a maximum width */
-                    height: 450px; /* Set the desired height */
-                    border: 1px solid #bfcbda88; /* Optional: Add border for styling */
-                    border-radius: 4px; /* Optional: Rounded corners */
-                    margin: 0 auto; /* Centers the iframe */
-                "
-            ></iframe>
+            src="https://lu.ma/embed/calendar/cal-NbgEYtPLuqBJhtM/events?compact=true"
+            width="600"
+            height="450"
+            frameborder="0"
+            style="border: 1px solid #bfcbda88; border-radius: 4px;"
+            allowfullscreen=""
+            aria-hidden="false"
+            tabindex="0"
+          ></iframe>
         </div>
     </div>
 </section>
