--- a/index.html
+++ b/index.html
@@ -469,23 +469,23 @@
 
 
 
-<!-- Luma Calendar Content -->
-<section class="content-section" class="zoom-in" class="animate-on-scroll>
-    <div class="container px-lg-5">
-        <div style="text-align: center;"> <!-- Centers the iframe horizontally -->
+<section class="content-section zoom-in animate-on-scroll" style="padding: 20px;">
+    <div class="container px-lg-5" style="padding: 20px;">
+        <div style="text-align: center; padding: 20px;"> <!-- Ensures padding around iframe -->
             <iframe
-            src="https://lu.ma/embed/calendar/cal-NbgEYtPLuqBJhtM/events?compact=true"
-            width="600"
-            height="450"
-            frameborder="0"
-            style="border: 1px solid #bfcbda88; border-radius: 4px;"
-            allowfullscreen=""
-            aria-hidden="false"
-            tabindex="0"
-          ></iframe>
+                src="https://lu.ma/embed/calendar/cal-NbgEYtPLuqBJhtM/events?compact=true"
+                width="600"
+                height="450"
+                frameborder="0"
+                style="border: 1px solid #bfcbda88; border-radius: 4px; padding: 10px;"
+                allowfullscreen=""
+                aria-hidden="false"
+                tabindex="0"
+            ></iframe>
         </div>
     </div>
 </section>
+
 
 
 <!-- Ticker Section with Famous Python Lines -->
