--- a/index.html
+++ b/index.html
@@ -469,22 +469,17 @@
 
 
 
-<section class="content-section zoom-in animate-on-scroll" style="padding: 20px;">
-    <div class="container px-lg-5" style="padding: 20px;">
-        <div style="text-align: center; padding: 20px;"> <!-- Ensures padding around iframe -->
-            <iframe
-                src="https://lu.ma/embed/calendar/cal-NbgEYtPLuqBJhtM/events?compact=true"
-                width="600"
-                height="450"
-                frameborder="0"
-                style="border: 1px solid #bfcbda88; border-radius: 4px; padding: 10px;"
-                allowfullscreen=""
-                aria-hidden="false"
-                tabindex="0"
-            ></iframe>
-        </div>
-    </div>
+<section class="content-section" style="display: flex; justify-content: center; align-items: center; width: 100%; overflow: hidden; padding: 20px;">
+    <iframe 
+        src="https://lu.ma/embed/calendar/cal-NbgEYtPLuqBJhtM/events?compact=true" 
+        frameborder="0" 
+        allowfullscreen="" 
+        aria-hidden="false" 
+        tabindex="0"
+        style="width: 100%; max-width: 1200px; height: 1400px; border: 1px solid #bfcbda88; border-radius: 4px; margin: 0 auto; display: block;">
+    </iframe>
 </section>
+
 
 
 
