--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
 
 
 
-<section class="content-section" style="display: flex; justify-content: center; align-items: center; width: 100%; overflow: hidden; padding: 20px;">
+<section class="content-section" style="display: flex; justify-content: center; align-items: center; width: 100%; overflow: hidden; padding: 30px;">
     <iframe 
         src="https://lu.ma/embed/calendar/cal-NbgEYtPLuqBJhtM/events?compact=true" 
         frameborder="0" 
@@ -761,7 +761,7 @@
                 Join Code Crunch as our <strong>Tech Engagement Chair</strong>—a dynamic role combining technical leadership, event support, and outreach. With just 5 hours a week, you can help shape an inclusive tech community at FIU. Apply now and be the spark that drives innovation! ✨
             </p>
             
-            <h3 class="fs-5 fw-bold mt-4">Who Can Apply?</h3>
+            <h3 class="fs-5 fw-bold mt-4">Who Can Apply to the E-Board?</h3>
             <ul class="text-start mx-auto" style="max-width: 600px; list-style: none; padding: 0;">
                 <li>✅ FIU students from all majors.</li>
                 <li>✅ Students from other universities worldwide.</li>
