--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
     <!-- First Flyer -->
     <div style="text-align: center; max-width: 300px;">
         <div>
-            <img src="https://github.com/user-attachments/assets/078086b8-835f-4142-bb0c-6e50cfe5cc65" alt="Tropical Hacks Flyer" style="width: 100%; height: auto;">
+            <img src="https://github.com/user-attachments/assets/7ebadd9e-ddfe-43c3-a306-5d5de22f67e4" alt="305 Tropical Hacks Flyer" style="width: 100%; height: auto;">
         </div>
         <h3 style="margin-top: 20px; font-size: 18px;">Collaborators</h3>
         <ul style="text-align: left; padding-left: 20px;">
@@ -674,7 +674,7 @@
     <!-- Second Flyer -->
     <div style="text-align: center; max-width: 300px;">
         <div>
-            <img src="https://github.com/user-attachments/assets/984f536d-f92c-40a0-8293-e3ab5640a22b" alt="Tropical Hacks Flyer 2" style="width: 100%; height: auto;">
+            <img src="https://github.com/user-attachments/assets/984f536d-f92c-40a0-8293-e3ab5640a22b" alt="305 Fall Hacks Flyer 2" style="width: 100%; height: auto;">
         </div>
         <h3 style="margin-top: 20px; font-size: 18px;">Collaborators</h3>
         <ul style="text-align: left; padding-left: 20px;">
