--- a/index.html
+++ b/index.html
@@ -467,18 +467,29 @@
 </style>
 <p></p>
 
-
-
 <section class="content-section" style="display: flex; justify-content: center; align-items: center; width: 100%; overflow: hidden; padding: 30px;">
+    <blockquote 
+        class="instagram-media" 
+        data-instgrm-captioned 
+        data-instgrm-permalink="https://www.instagram.com/reel/DFwEbQIseXw/?utm_source=ig_embed&amp;utm_campaign=loading" 
+        data-instgrm-version="14" 
+        style="background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
+    </blockquote>
+    <script async src="https://www.instagram.com/embed.js"></script>
+</section>
+
+<section class="content-section" style="display: flex; justify-content: center; align-items: center; width: 100%; overflow: visible; padding: 30px;">
     <iframe 
         src="https://lu.ma/embed/calendar/cal-NbgEYtPLuqBJhtM/events?compact=true" 
         frameborder="0" 
-        allowfullscreen="" 
+        allowfullscreen 
         aria-hidden="false" 
         tabindex="0"
+        sandbox="allow-scripts allow-same-origin allow-forms"
         style="width: 100%; max-width: 1200px; height: 700px; border: 1px solid #bfcbda88; border-radius: 4px; margin: 0 auto; display: block;">
     </iframe>
 </section>
+
 
 
 
