--- a/index.html
+++ b/index.html
@@ -478,17 +478,17 @@
     <script async src="https://www.instagram.com/embed.js"></script>
 </section>
 
-<section class="content-section" style="display: flex; justify-content: center; align-items: center; width: 100%; overflow: visible; padding: 30px;">
+<section class="content-section" style="width: 100%; padding: 30px;">
     <iframe 
-        src="https://lu.ma/embed/calendar/cal-NbgEYtPLuqBJhtM/events?compact=true" 
-        frameborder="0" 
-        allowfullscreen 
-        aria-hidden="false" 
+        src="https://lu.ma/embed/calendar/cal-NbgEYtPLuqBJhtM/events?lt=light"
+        frameborder="0"
+        allowfullscreen
+        aria-hidden="false"
         tabindex="0"
-        sandbox="allow-scripts allow-same-origin allow-forms"
-        style="width: 100%; max-width: 1200px; height: 700px; border: 1px solid #bfcbda88; border-radius: 4px; margin: 0 auto; display: block;">
+        style="width: 600px; height: 450px; border: 1px solid #bfcbda88; border-radius: 4px; margin: 0 auto; display: block;">
     </iframe>
 </section>
+
 
 
 
