--- a/all-eboard.html
+++ b/all-eboard.html
@@ -190,7 +190,7 @@
               <!-- Column 2: Key Responsibilities -->
               <div data-aos="fade-up" class="col-lg-4 mb-4">
                 <h2 class="fs-4 fw-bold">Open Position: Tech Engagement Chair </h2>
-                <p><strong>Volunteer role</strong></p>
+                <p><strong>Volunteer Role</strong> - A hybrid role blending leadership, technical guidance, and community engagement.</p>
                 <p><strong>Time Commitment:</strong> 5 hours per week.</p>
                 <h3 class="fs-5 fw-bold mt-4">Key Responsibilities:</h3>
                 <p><strong>Weekly Tech Sessions:</strong></p>
@@ -203,11 +203,11 @@
                 </ul>
                 <p><strong>Club Logistics & Special Events:</strong></p>
                 <ul>
-                  <li>Assist for 1 hour with planning and executing club events and workshops.</li>
+                  <li>Assist with planning and executing club events and workshops.</li>
                 </ul>
-                <p><strong>Club Outreach:</strong></p>
+                <p><strong>Club Outreach - 2 hour per week:</strong></p>
                 <ul>
-                  <li>Dedicate 1 hour per week to expand our network and connect with potential members and partners.</li>
+                  <li>Dedicate time to expand our network and connect with potential members and partners.</li>
                   <li>
                     Conduct weekly tabling events and short 5-minute classroom outreach sessions to invite students to club events and share opportunities.
                   </li>
