--- a/all-eboard.html
+++ b/all-eboard.html
@@ -205,7 +205,7 @@
                 <ul>
                   <li>Assist with planning and executing club events and workshops.</li>
                 </ul>
-                <p><strong>Club Outreach - 2 hour per week:</strong></p>
+                <p><strong>Club Outreach - 2 hours per week:</strong></p>
                 <ul>
                   <li>Dedicate time to expand our network and connect with potential members and partners.</li>
                   <li>
