--- a/CODECRUNCH-HACK.html
+++ b/CODECRUNCH-HACK.html
@@ -576,7 +576,7 @@
     <!-- NAVIGATION MENU -->
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="#">305 Hacks</a>
+            <a class="navbar-brand" href="#">305 Hackathon</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -598,7 +598,7 @@
 
     <!-- Title & Sun -->
     <div class="title-container">
-        <h1 class="tropical-title">305 Hacks</h1>
+        <h1 class="tropical-title">305 Hackathon</h1>
         <div class="sun"></div>
     </div>
 
@@ -672,7 +672,7 @@
         <h2>Hacking in Paradise</h2>
     </div>
 
-    <h2>About 305 Hacks</h2>
+    <h2>About 305 Hackathon</h2>
     <p>Join hackers from around the world for 36 hours of innovation in paradise.</p>
 
 </section>
@@ -827,11 +827,11 @@
         <div class="row text-center">
             <!-- Column 1 -->
             <div class="col-lg-6 mb-4">
-                <h4 class="fw-bold">Hackathon Overview</h4>
+                <h4 class="fw-bold">Code Crunch - 305 Hackathon | Edition Srping 2025: Hackathon Overview</h4>
                 <p>Hack your way into the spring vibes! Let Miami's 305 energy inspire your next big idea in this vibrant hackathon.</p>
                 <p><strong>Workshops:</strong> March 24th - 27th, 2025<br>Daily sessions from Monday to Thursday to prep you for the big weekend.</p>
                 <p><strong>Hackathon:</strong> March 29–31, 2025<br>Starts Saturday at 9 AM and ends Monday at 5 PM.</p>
-                <p><strong>Career Fair:</strong> March 29–31, 2025</p>
+                <p><strong>In Person Career Fair:</strong> March, 2025</p>
             </div>
 
             <!-- Column 2 -->
@@ -847,8 +847,8 @@
             <div class="col-lg-6 mb-4 mx-auto">
                 <h4 class="fw-bold">Upcoming Hackathons</h4>
                 <ul class="list-unstyled">
-                    <li><strong>Code Crunch - 305 Hackathon:</strong> September 12–14, 2025</li>
-                    <li><strong>Code Crunch - 305 Spring Hack:</strong> March 27–29, 2026</li>
+                    <li><strong>Code Crunch - 305 Hackathon | Edition Fall 2025:</strong> September 12–14, 2025</li>
+                    <li><strong>Code Crunch - 305 Hackathon | Edition Spring 2026:</strong> March 27–29, 2026</li>
                 </ul>
             </div>
         </div>
@@ -999,6 +999,46 @@ onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.tr
     </div>
 </div>
 
+
+<!-- Florida Engineering Society (FES FIU) Collaborator Card -->
+<div style="display: flex; align-items: center; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); width: calc(33.33% - 20px); min-width: 300px; transition: transform 0.3s ease-in-out;"
+    onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.transform='translateY(0)';">
+    <img src="https://github.com/user-attachments/assets/206a03b8-d2c5-4cd6-bc8b-e5f834f495d6" alt="FES FIU Logo" style="max-width: 80px; height: auto; margin-right: 15px;">
+    <div>
+        <h5 style="font-size: 18px; font-weight: bold; margin-bottom: 5px;">🔧 Florida Engineering Society (FES FIU)</h5>
+        <p style="font-size: 14px; color: #555; margin: 0;">Advancing the engineering profession through networking, leadership, and technical growth.</p>
+    </div>
+</div>
+
+<!-- International Business Honors Society (IBHS) Collaborator Card -->
+<div style="display: flex; align-items: center; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); width: calc(33.33% - 20px); min-width: 300px; transition: transform 0.3s ease-in-out;"
+    onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.transform='translateY(0)';">
+    <img src="https://github.com/user-attachments/assets/206a03b8-d2c5-4cd6-bc8b-e5f834f495d6" alt="IBHS Logo" style="max-width: 80px; height: auto; margin-right: 15px;">
+    <div>
+        <h5 style="font-size: 18px; font-weight: bold; margin-bottom: 5px;">🌍 International Business Honors Society (IBHS)</h5>
+        <p style="font-size: 14px; color: #555; margin: 0;">Developing global business leaders through academic excellence and international exposure.</p>
+    </div>
+</div>
+
+<!-- American Marketing Association (AMA) Collaborator Card -->
+<div style="display: flex; align-items: center; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); width: calc(33.33% - 20px); min-width: 300px; transition: transform 0.3s ease-in-out;"
+    onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.transform='translateY(0)';">
+    <img src="https://github.com/user-attachments/assets/206a03b8-d2c5-4cd6-bc8b-e5f834f495d6" alt="AMA Logo" style="max-width: 80px; height: auto; margin-right: 15px;">
+    <div>
+        <h5 style="font-size: 18px; font-weight: bold; margin-bottom: 5px;">📢 American Marketing Association (AMA)</h5>
+        <p style="font-size: 14px; color: #555; margin: 0;">Bridging the gap between marketing professionals and students through networking and workshops.</p>
+    </div>
+</div>
+
+<!-- Dean’s Student Advisory Board (DSAB) Collaborator Card -->
+<div style="display: flex; align-items: center; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); width: calc(33.33% - 20px); min-width: 300px; transition: transform 0.3s ease-in-out;"
+    onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.transform='translateY(0)';">
+    <img src="https://github.com/user-attachments/assets/206a03b8-d2c5-4cd6-bc8b-e5f834f495d6" alt="DSAB Logo" style="max-width: 80px; height: auto; margin-right: 15px;">
+    <div>
+        <h5 style="font-size: 18px; font-weight: bold; margin-bottom: 5px;">🏛️ Dean’s Student Advisory Board (DSAB)</h5>
+        <p style="font-size: 14px; color: #555; margin: 0;">Providing a voice for students to shape academic policies and enhance student life.</p>
+    </div>
+</div>
 
 
 
