--- a/index.html
+++ b/index.html
@@ -676,6 +676,12 @@
             <li>ERS FIU (Engineers for Real Solutions)</li>
             <li>Artificial Intelligence Organization (AIO)</li>
             <li>🌈 Pride Student Union</li>
+            <li>Florida Engineering Society (FES FIU)</li>
+            <li>International Business Honors Society (IBHS)</li>
+            <li>American Marketing Association (AMA)</li>
+            <li>Dean’s Student Advisory Board (DSAB)</li>
+
+            <li>Workshop - Collaborator: Women in Computer Science (WiCS)</li>
         </ul>
         <div style="margin-top: 15px;">
             <a href="CODECRUNCH-HACK.html" style="display: inline-block; padding: 8px 15px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px; font-size: 14px; font-weight: bold;">Get More Info</a>
@@ -689,8 +695,22 @@
         </div>
         <h3 style="margin-top: 20px; font-size: 18px;">Collaborators</h3>
         <ul style="text-align: left; padding-left: 20px;">
+            <li>Panther Robotics @ FIU</li>
+            <li>National Society of Black Engineers (NSBE)</li>
+            <li>Women in CyberSecurity (WiCyS)</li>
             <li>SWE FIU (Society of Women Engineers)</li>
+            <li>Society of Hispanic Professional Engineers (SHPE)</li>
+            <li>ALPFA FIU (Association of Latino Professionals for America)</li>
             <li>AIS FIU (Association for Information Systems)</li>
+            <li>ERS FIU (Engineers for Real Solutions)</li>
+            <li>Artificial Intelligence Organization (AIO)</li>
+            <li>🌈 Pride Student Union</li>
+            <li>Florida Engineering Society (FES FIU)</li>
+            <li>International Business Honors Society (IBHS)</li>
+            <li>American Marketing Association (AMA)</li>
+            <li>Dean’s Student Advisory Board (DSAB)</li>
+
+            <li>Workshop - Collaborator: Women in Computer Science (WiCS)</li>
         </ul>
         <div style="margin-top: 15px;">
             <a href="all-305-Hackathon25.html" style="display: inline-block; padding: 8px 15px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px; font-size: 14px; font-weight: bold;">Get More Info</a>
