--- a/CODECRUNCH-HACK.html
+++ b/CODECRUNCH-HACK.html
@@ -624,6 +624,9 @@
         <div class="flyer-placeholder">
             <img src="https://github.com/user-attachments/assets/7ebadd9e-ddfe-43c3-a306-5d5de22f67e4" alt="305 Tropical Hacks Flyer">
         </div>
+        <div class="flyer-placeholder">
+            <img src="https://github.com/user-attachments/assets/984f536d-f92c-40a0-8293-e3ab5640a22b" alt="305 Tropical Hacks Flyer">
+        </div>
         <div class="est-container">
             <img src="https://github.com/user-attachments/assets/30568fdc-c31d-4260-8a24-7e62db85451a" alt="Hibiscus Flower" class="hibiscus-top">
             <div class="est-2025">EST. 2025</div>
@@ -633,7 +636,7 @@
     <!-- Apply Now Button -->
     <div class="apply-now-container">
         <p></p>
-        <a href="https://forms.gle/9aqZ2eZquc4jFcaf6" class="apply-button">Apply Now</a>
+        <a href="https://forms.gle/9aqZ2eZquc4jFcaf6" class="apply-button">Apply Now 305 Hackathon |Edition Spring 2025</a>
         <p></p>
     </div>
 
